@@ -1,4 +1,6 @@
 2002-12-19	fabian
+    * Fixed enter key on numeric keyboard problem
+    * Fixed a problem that causes transparency settings lost
     * Fixed a lot of bugs related to VT100 emulation.
     
 2002-12-18	fabian
